[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A simple blockchain implementation in Rust"

[dependencies]
chrono = "0.4"         # For timestamp handling
sha2 = "0.10"          # For SHA-256 hashing
serde = { version = "1.0", features = ["derive"] }  # For serialization
serde_json = "1.0"     # For JSON encoding/decoding